--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     crossorigin=""></script>
     <!-- My API KEY -->
     <script type="text/javascript" src="static/js/config.js"></script>
+    <!-- My Data -->
+    <script type="text/javascript" src="static/js/cities.js"></script>
     <!-- My Logic -->
     <script type="text/javascript" src="static/js/logic.js"></script>
 </body>
