--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- My API KEY -->
     <script type="text/javascript" src="static/js/config.js"></script>
     <!-- My Data -->
-    <script type="text/javascript" src="static/js/cities.js"></script>
+    <!-- <script type="text/javascript" src="static/js/cities.js"></script> -->
     <!-- My Logic -->
     <script type="text/javascript" src="static/js/logic.js"></script>
 </body>
