--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
     integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
     crossorigin=""></script>
-    <!-- My API KEY -->
+    <!-- My MapBox API KEY -->
     <script type="text/javascript" src="static/js/config.js"></script>
-    <!-- My Data -->
-    <!-- <script type="text/javascript" src="static/js/cities.js"></script> -->
     <!-- My Logic -->
-    <script type="text/javascript" src="static/js/logicStep5.js"></script>
+    <script type="text/javascript" src="static/js/logic.js"></script>
 </body>
 </html>
